hello-world/hello-world-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cours-dev-ops
spec:
  selector:
    app: cours-dev-ops
  ports:    
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 31000
  type: NodePort
